# gvox-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  test_wasm.bat
gvox/: CMakeLists.txt
gvox-sys/: Cargo.toml  build.rs
gvox-sys/src/: bindings.rs  gvox.h  lib.rs  wasm_shim.rs
gvox/cmake/: emscripten.cmake
prebuilt/: gvox.h  gvox.lib
src/: adapters.rs  lib.rs  magicavoxel.vox  palette.gvox  test.gvox  tests.rs
src/tests/: procedural_parse.rs
