[package]
name = "gvox-rs"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Voxel file format parser"
homepage = "https://github.com/GabeRundlett/gvox-rs"
repository = "https://github.com/GabeRundlett/gvox-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
fxhash = "0.2.1"
gvox-sys = { path = "gvox-sys", version = "1.1.0", default-features = false }
int-enum = "0.5.0"
