[package]
name = "gvox-sys"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Voxel file format parser"
homepage = "https://github.com/GabeRundlett/gvox"
repository = "https://github.com/GabeRundlett/gvox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["rlib", "cdylib"]

[dependencies]

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.63.0"
