[package]
name = "gvox-sys"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Voxel file format parser"
homepage = "https://github.com/GabeRundlett/gvox-rs"
repository = "https://github.com/GabeRundlett/gvox-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.63.0"
